# rupytmatrix

./: .gitignore  .readthedocs.yaml  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
benches/: bench_vs_pytmatrix.py
docs/: changelog.md  contributing.md  index.md  quickstart.md
docs/howto/: custom_beam.md  custom_fallspeed.md  custom_psd.md  hydromix.md  index.md  profiling.md
docs/rust-api/: index.md
docs/tutorials/: 02_raindrop_zdr.ipynb  03_psd_gamma_rain.ipynb  04_oriented_ice.ipynb  05_radar_band_sweep.ipynb  06_hd_mix.ipynb  07_doppler_spectrum_rain.ipynb  08_spectral_polarimetry_rain_ice.ipynb  09_zhu_2023_particle_inertia.ipynb  10_slw_vs_snow.ipynb  11_honeyager_hydrometeor_classes.ipynb  12_spectral_polarimetry_rain_slw_hail.ipynb  13_wind_turbulence_sensitivity.ipynb  14_beam_pattern_scene.ipynb  index.md
examples/: 01_sphere_mie.ipynb  01_sphere_mie.py  02_raindrop_zdr.ipynb  02_raindrop_zdr.py  03_psd_gamma_rain.ipynb  03_psd_gamma_rain.py  04_oriented_ice.ipynb  04_oriented_ice.py  05_radar_band_sweep.ipynb  05_radar_band_sweep.py  06_hd_mix.ipynb  06_hd_mix.py  07_doppler_spectrum_rain.ipynb  08_spectral_polarimetry_rain_ice.ipynb  09_zhu_2023_particle_inertia.ipynb  09_zhu_2023_particle_inertia.py  11_honeyager_hydrometeor_classes.ipynb  12_spectral_polarimetry_rain_slw_hail.ipynb  12_spectral_polarimetry_rain_slw_hail.py  _build_notebooks.py  basic_usage.py
examples-check/: mie_check.rs
python/rupytmatrix/: __init__.py  _core.pyi  psd.py  radar.py  refractive.py  scatter.py  scatterer.py  tmatrix_aux.py
python/rustmatrix/: __init__.py  _core.pyi  orientation.py  psd.py  quadrature.py  radar.py  refractive.py  scatter.py  scatterer.py  spectra.py  tmatrix_aux.py
src/: amplitude.rs  lib.rs  mie.rs  pybindings.rs  quadrature.rs  shapes.rs  special.rs  tmatrix.rs  wigner.rs
tests/: conftest.py  test_mie.py  test_orientation.py  test_parity_pytmatrix.py  test_psd.py  test_quadrature_python.py  test_radar.py  test_refractive.py  test_scatterer_api.py  test_spectra.py
